# MolDef-VRS-Translator

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_simple_allele_creation_and_translation.ipynb  02_vrs_to_fhir_allele_translation.ipynb  03_fhir_to_vrs_allele_translation.ipynb  04_full_allele_roundtrip_translation.ipynb  05_spdi_hgvs_to_fhir_variation.ipynb  README.md  allele_factory_demo.ipynb  fhir_allele_translation.ipynb  fhir_variation_translation.ipynb  vrs_allele_translation.ipynb  vrs_fhir_full_translation_demo.ipynb
src/api/: seqrepo.py
src/builders/: allele_factory.py
src/exceptions/: api.py  fhir.py  utils.py
src/normalize/: allele_normalizer.py
src/normalizers/: allele_normalizer.py
src/pipelines/: clinvar_translate.py
src/translators/: allele_translator.py  allele_utils.py  fhir_to_vrs.py  fhir_to_vrs_allele.py  minimal_allele_translator.py  representation_translator.py  sequence_expression_translator.py  variation_translator.py  vrs_fhir_translator.py  vrs_json_pointers.py  vrs_to_fhir.py  vrs_to_fhir_allele.py
src/translators/validations/: allele.py
src/utils/: allele_factory.py  clinvar_translations.py
src/vrs_tools/: hgvs_tools.py  normalizer.py  translator.py
tests/: example_test_data.py  test_allele_profile_full_translation.py  test_allele_profile_minimal_translation.py  test_alleleprofile_translation.py  test_fhir_to_vrs.py  test_variation_profile_expression_translation.py  test_vrs_allele_full_translation.py  test_vrs_allele_minimal_translation.py  test_vrs_to_alleleprofile_translation.py  test_vrs_to_fhir.py
