[project]
name = "moldef.translator" 
version = "0.4.0" 
description = "A Python implementation supporting translation between HL7 FHIR MolecularDefinition profiles and genomic representations including VRS, HGVS, and SPDI."
readme = "README.md"
authors = [
    {name = "Salem Bajjali"},
    {name = "Robert R. Freimuth"},
]

license = { file = "LICENSE" }
requires-python = ">=3.11"

keywords = [
    "FHIR",
    "HL7",
    "MolecularDefinition",
    "genomics",
    "variation",
    "representation",
    "bioinformatics",
    "GA4GH",
    "VRS",
    "HGVS",
    "SPDI"
] 

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ga4gh.vrs[extras]==2.3.1",
    "ipykernel==6.28.0",
    "moldef-spec",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "deepdiff==8.6.1",
    "ruff==0.8.3"
]

[build-system]
requires = ["setuptools>=65.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
exclude = ["notebooks", "data", "edits"]

[tool.ruff.lint]

select = [
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "E", "W",  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "B",  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "UP",  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SIM",  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "ARG",  # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "S",  # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
   ]

ignore = ["E501"] # Ruff format already handles long lines
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"  # Enforce double quotes
docstring-code-format = true  # Format code inside docstrings

[tool.uv.sources]
moldef-spec = { path = "../MolDef-spec-python", editable = true }
